# application-services

./: .travis.yml  Cargo.toml
.circleci/: config.yml
components/ac_log/src/: lib.rs
components/logins/android/src/test/java/mozilla/appservices/logins/: DatabaseLoginsStorageTest.kt
components/logins/ffi/: Cargo.toml
components/logins/ffi/src/: lib.rs
components/places/examples/: autocomplete.rs
components/places/ffi/: Cargo.toml
components/places/ffi/src/: lib.rs
components/places/src/: storage.rs
components/places/src/api/: matcher.rs
components/places/src/db/: db.rs  schema.rs
components/places/src/history_sync/: plan.rs
components/support/ffi/: Cargo.toml
components/support/ffi/src/: error.rs  handle_map.rs  lib.rs
