[package]
name = "logins_ffi"
edition = "2018"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]

[lib]
name = "logins_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde_json = "1.0.28"
log = "0.4"
url = "1.7.1"

[dependencies.rusqlite]
version = "0.16.0"
features = ["sqlcipher"]

[dependencies.logins]
path = ".."
features = ["ffi"]

[dependencies.sync15]
path = "../../sync15"

[dependencies.ffi-support]
path = "../../support/ffi"

